--- a/app/src/main/res/layout/activity_account_create.xml
+++ b/app/src/main/res/layout/activity_account_create.xml
@@ -59,7 +59,7 @@
         android:id="@+id/phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Phone number(10 digits)"
+        android:hint="Phone number"
         app:layout_constraintTop_toTopOf="@+id/username"
         app:layout_constraintStart_toEndOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,8 +157,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="116dp"
         android:layout_marginEnd="8dp"
-        android:text="I agree to the Privacy Policy."
-        android:textSize="18sp"
+        android:text="I agree to the Privacy Policy.(Click to read)"
+        android:textSize="15sp"
         app:layout_constraintEnd_toStartOf="@+id/privacySwitch"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
