--- a/app/src/main/res/layout/medicine_row.xml
+++ b/app/src/main/res/layout/medicine_row.xml
@@ -9,32 +9,59 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
 
-        <ImageView
-            android:id="@+id/userProfileImageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/user" />
-
-        <TextView
-            android:id="@+id/recyclerEmailText"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="username"
-            android:textSize="16sp"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/black"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:id="@+id/userLayout">
 
-        <ImageView
-            android:id="@+id/dots"
-            android:layout_width="52dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/dots2" />
+            <ImageView
+                android:id="@+id/userProfileImageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/user" />
+
+            <!-- Vertical LinearLayout for email and fullname text views -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginStart="10dp">
+
+                <TextView
+                    android:id="@+id/recyclerEmailText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="username"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/fullnameTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Full Name"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:textColor="@color/black"/>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/dots"
+                android:layout_width="52dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/dots" />
+        </LinearLayout>
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/recyclerCommentText"
@@ -58,7 +85,6 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
-
         <ImageView
             android:id="@+id/likeImageView"
             android:layout_width="24dp"
@@ -91,20 +117,27 @@
             android:scaleType="fitCenter"
             android:src="@drawable/comment" />
 
+        <TextView
+            android:id="@+id/commentNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/commentImageView"
+            android:layout_marginStart="-18dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/commentImageView"
+            android:text="20"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/shareImageView"
-            android:layout_width="44dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="90dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="120dp"
             android:layout_toEndOf="@id/commentImageView"
             android:onClick="sharePost"
             android:scaleType="fitCenter"
             android:src="@drawable/share2" />
 
     </RelativeLayout>
-
-
-
-
-
 </LinearLayout>
