--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/fragment_background">
 
-    <!-- ImageView for displaying the logo -->
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="200dp"
@@ -15,7 +15,7 @@
         android:src="@drawable/logo"
         android:scaleType="centerInside"/>
 
-    <!-- TextView for displaying the app name at the bottom -->
+
     <TextView
         android:id="@+id/textViewAppName"
         android:layout_width="wrap_content"
@@ -25,6 +25,6 @@
         android:textSize="50sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="200dp"/>  <!-- Adjust margin as needed -->
+        android:layout_marginBottom="200dp"/>
 
 </RelativeLayout>
