--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,19 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/fragment_background">
-
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/rounded_corners_background"
-        android:src="@drawable/logo"
-        android:scaleType="centerInside"/>
-
 
     <TextView
         android:id="@+id/textViewAppName"
@@ -23,8 +12,28 @@
         android:text="PharmBox"
         android:textStyle="bold"
         android:textSize="50sp"
+        android:textColor="@color/green2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="200dp"/>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_margin="5dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="100dp"
+        android:layout_above="@id/textViewAppName"
+        android:layout_centerHorizontal="true">
+
+        <ImageView
+            android:id="@+id/roundedImageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@color/white"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo" />
+    </androidx.cardview.widget.CardView>
+
 </RelativeLayout>
+
